# entity-allocation

./: .gitignore  README.md  __init__.py  config.yaml  pyproject.toml  render.yaml  requirements.txt  run.py  setup.cfg
ceviche/: cli.py
ceviche/ai/: classifier.py  query_handler.py
ceviche/engine/: allocator.py  categorizer.py  compliance.py  journal_entries.py
ceviche/models/: entities.py  policies.py
ceviche/reports/: summary.py
ceviche/tests/: test_allocator.py  test_compliance.py  test_web_api.py
ceviche/tests/fixtures/: sample_data.py
ceviche/web/: api.py  server.py
db/: database.py
importers/: csv_importer.py  validators.py
models/: __init__.py  allocations.py  expenses.py
tests/: conftest.py  test_importer.py
web/: api.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js
